[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/red_btn.png" type="Texture" id=1]
[ext_resource path="res://Scripts/DoorSystem.gd" type="Script" id=2]
[ext_resource path="res://Assets/green_btn.png" type="Texture" id=3]
[ext_resource path="res://Assets/blue_btn.png" type="Texture" id=4]

[sub_resource type="Animation" id=5]
resource_name = "Door"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Green",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Red",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.2891, 64.3505 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Green",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Red",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3.79352, 24 )

[node name="DoorSystem" type="Node"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Door = SubResource( 5 )

[node name="Door" type="StaticBody2D" parent="."]
z_index = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="Door"]
position = Vector2( 0, 100 )
scale = Vector2( 0.5, 2 )
frames = SubResource( 1 )
animation = "Blue"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2( -0.246643, 100.051 )
shape = SubResource( 2 )

[node name="PressurePlate" type="Area2D" parent="."]
z_index = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="PressurePlate"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
animation = "Green"

[node name="Label" type="Label" parent="PressurePlate/AnimatedSprite"]
margin_left = -32.0
margin_top = -16.0
margin_right = 32.0
margin_bottom = 16.0
text = "TEST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressurePlate"]
shape = SubResource( 4 )
[connection signal="area_entered" from="PressurePlate" to="." method="_on_PressurePlate_area_entered"]
[connection signal="area_exited" from="PressurePlate" to="." method="_on_PressurePlate_area_exited"]
[connection signal="body_entered" from="PressurePlate" to="." method="_on_PressurePlate_body_entered"]
[connection signal="body_exited" from="PressurePlate" to="." method="_on_PressurePlate_body_exited"]
